--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">ZavrsniIspitAndroid</string>
+    <string name="search_parameters">Enter query parameters here</string>
+    <string name="search_button">Search</string>
 </resources>
