--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,8 +2,8 @@
     <string name="app_name">ZavrsniIspitAndroid</string>
     <string name="search_parameters">Enter query parameters here</string>
     <string name="search_button">Search</string>
-    <string name="pref_notification_key">notification</string>
-    <string name="pref_notification_title">Show notifications</string>
+    <string name="pref_splashscreen_key">splashscreen</string>
+    <string name="pref_splashscreen_title">Show splashScreen</string>
     <string name="pref_toast_key" translatable="false">toast</string>
     <string name="pref_toast_title">Show toast messages</string>
 </resources>
